--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal - www.codingnepalweb.com -->
 <!-- אתר נכתב על ידי ולדיסלב לביא עובד חברת מגלקום -->
 <html lang="en">
 <head>
@@ -17,11 +16,11 @@
       <input type="radio" name="slider" id="close-btn">
       <ul class="nav-links">
         <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-        <li><a href="./index.html">דף הבית</a></li>
+        <li><a href="index.html">דף הבית  <i class="fa fa-home" aria-hidden="true"></i></a></li>
         <li>
-          <a href="#" class="desktop-item">תפריט מהיר &#9881;</a>
+          <a href="#" class="desktop-item">תפריט מהיר <i class="fa fa-cogs" aria-hidden="true"></i></a>
           <input type="checkbox" id="showDrop">
-          <label for="showDrop" class="mobile-item">תפריט מהיר &#9881;</label>
+          <label for="showDrop" class="mobile-item">תפריט מהיר <i class="fa fa-cogs" aria-hidden="true"></i></label>
           <ul class="drop-menu">
             <li><a href="#">לקוחות החברה</a></li>
             <li><a href="#"> טלפון לקוחות בשרות</a></li>
@@ -30,9 +29,9 @@
           </ul>
         </li>
         <li>
-          <a href="#" class="desktop-item">רשימת לקוחות &#128203;</a>
+          <a href="#" class="desktop-item">רשימת לקוחות <i class="fa fa-list-alt" aria-hidden="true"></i></a>
           <input type="checkbox" id="showMega">
-          <label for="showMega" class="mobile-item">רשימת לקוחות &#128203;</label>
+          <label for="showMega" class="mobile-item">רשימת לקוחות <i class="fa fa-list-alt" aria-hidden="true"></i></label>
           <div class="mega-box">
             <div class="content">
               <div class="row">
@@ -86,7 +85,7 @@
             </div>
           </div>
         </li>
-        <li><a href="tel:+972543230056">מחלקת שרות החברה &#9742;</a></li>
+        <li><a href="tel:+972543230056">מחלקת שרות החברה <i class="fa fa-phone" aria-hidden="true"></i></a></li>
       </ul>
       <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
@@ -95,9 +94,9 @@
   <div class="body-text">
     <div class="title">אתר עזר לטכנאים  magalcom</div>
     <div class="sub-title">
-    <img src="./Slider-5.jpg" alt="">
+    <img src="Slider-5.jpg" alt="">
   </div>
-  <p>(אין להעתיק,להפיץ,להציג בפומבי או למסור לצד שלישי כל חלק מן האתר בלא קבלת אישור מחברת מגלקום בע''מ.(במקרה של תקלה יש לפנות בטלפון 054-3230056 *</p>
+  <p id="p2">אין להעתיק,להפיץ,להציג בפומבי או למסור לצד שלישי כל חלק מן האתר בלא קבלת אישור מחברת מגלקום בע''מ</p>
     <p id="p1">כל הזכויות שמורות לחברת מגלקום בע''מ &#169;</p>
   </div>
 </body>
