--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- אתר נכתב על ידי ולדיסלב לביא עובד חברת מגלקום -->
 <html lang="en">
+  <form dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
+  <form dir="rtl">
   <nav>
     <div class="wrapper">
       <div class="logo"><a href="https://magalcom.com/">magalcom</a></div>
@@ -16,22 +18,23 @@
       <input type="radio" name="slider" id="close-btn">
       <ul class="nav-links">
         <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-        <li><a href="index.html">דף הבית  <i class="fa fa-home" aria-hidden="true"></i></a></li>
+        <li><a href="index.html" class="desktop-item"><i class="fa fa-home" aria-hidden="true"></i>  דף הבית </i></a></li>
+        <!-- <label for="ajax" class="mobile-item"><i class="fa fa-home" aria-hidden="true"></i>  דף הבית </i></a></li></label> -->
         <li>
-          <a href="#" class="desktop-item">תפריט מהיר <i class="fa fa-cogs" aria-hidden="true"></i></a>
+          <a href="#" class="desktop-item"><i class="fa fa-cogs" aria-hidden="true"></i>  תפריט מהיר </a>
           <input type="checkbox" id="showDrop">
-          <label for="showDrop" class="mobile-item">תפריט מהיר <i class="fa fa-cogs" aria-hidden="true"></i></label>
+          <label for="showDrop" class="mobile-item"><i class="fa fa-cogs" aria-hidden="true"></i>  תפריט מהיר </label>
           <ul class="drop-menu">
             <li><a href="#">לקוחות החברה</a></li>
             <li><a href="#"> טלפון לקוחות בשרות</a></li>
-            <li><a href="#">Drop menu 3</a></li>
+            <li><a href="#">תוכנות עזר</a></li>
             <li><a href="#">Drop menu 4</a></li>
           </ul>
         </li>
         <li>
-          <a href="#" class="desktop-item">רשימת לקוחות <i class="fa fa-list-alt" aria-hidden="true"></i></a>
+          <a href="#" class="desktop-item"><i class="fa fa-list-alt" aria-hidden="true"></i>  רשימת לקוחות </a>
           <input type="checkbox" id="showMega">
-          <label for="showMega" class="mobile-item">רשימת לקוחות <i class="fa fa-list-alt" aria-hidden="true"></i></label>
+          <label for="showMega" class="mobile-item"><i class="fa fa-list-alt" aria-hidden="true"></i> רשימת לקוחות</label>
           <div class="mega-box">
             <div class="content">
               <div class="row">
@@ -85,7 +88,8 @@
             </div>
           </div>
         </li>
-        <li><a href="tel:+972543230056">מחלקת שרות החברה <i class="fa fa-phone" aria-hidden="true"></i></a></li>
+        <li><a href="tel:+972543230056"class="desktop-item"><i class="fa fa-phone" aria-hidden="true"></i> מחלקת שרות החברה</a></li>
+        <label for="showMega" class="mobile-item"><i class="fa fa-phone" aria-hidden="true"></i> מחלקת שרות החברה</a></li></label>
       </ul>
       <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
