--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
         </li>
         <li><a href="tel:+972543230056"class="desktop-item"><i class="fa fa-phone" aria-hidden="true"></i> מחלקת שרות החברה</a></li>
-        <label for="showMega" class="mobile-item"><i class="fa fa-phone" aria-hidden="true"></i> מחלקת שרות החברה</a></li></label>
+         <label for="tel"><a href="tel:+972543230056" class="mobile-item"><i class="fa fa-phone" aria-hidden="true"></i> מחלקת שרות החברה</a></li></label> 
       </ul>
       <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
