--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
           <div class="mega-box">
             <div class="content">
               <div class="row">
+                <hr>
                 <header> לקוחות החברה בדרום</header>
+                <hr>
                 <ul class="mega-links">
                   <li><a href="#">כי''ל</a></li>
                   <li><a href="#">סודה סטרים</a></li>
@@ -50,7 +52,9 @@
                 </ul>
               </div>
               <div class="row">
+                <hr>
                 <header>לקוחות החברה בצפון</header>
+                <hr>
                 <ul class="mega-links">
                     <li><a href="#">רכבת ישראל</a></li>
                     <li><a href="#"> צ.ה.ל</a></li>
@@ -58,11 +62,13 @@
                     <li><a href="#">טכניון חיפה</a></li>
                     <li><a href="#">עריית חיפה</a></li>
                     <li><a href="#">עריית הרצליה</a></li>
-                    <li><a href="#">מרכז רפואי תל השומר</a></li>
+                    <li><a href="#"> תל השומר</a></li>
                 </ul>
               </div>
               <div class="row">
+                <hr>
                 <header>לקוחות החברה במרכז</header>
+                <hr>
                 <ul class="mega-links">
                     <li><a href="#">משרדי כ''יל</a></li>
                     <li><a href="#">עריית תל אביב</a></li>
@@ -74,7 +80,9 @@
                 </ul>
               </div>
               <div class="row">
+                <hr>
                 <header> לקוחות החברה בנגב</header>
+                <hr>
                 <ul class="mega-links">
                     <li><a href="#">כי''ל</a></li>
                     <li><a href="#">סודה סטרים</a></li>
@@ -82,7 +90,7 @@
                     <li><a href="#">שרות בתי הסוהר</a></li>
                     <li><a href="#">עריית באר שבע</a></li>
                     <li><a href="#">טבע טק נאות חובב</a></li>
-                    <li><a href="#">משטרת באר שבע</a></li>
+                    <!-- <li><a href="#">משטרת בארשבע</a></li> -->
                 </ul>
               </div>
             </div>
@@ -101,7 +109,7 @@
     <img src="Slider-5.jpg" alt="">
   </div>
   <p id="p2">אין להעתיק,להפיץ,להציג בפומבי או למסור לצד שלישי כל חלק מן האתר בלא קבלת אישור מחברת מגלקום בע''מ</p>
-    <p id="p1">כל הזכויות שמורות לחברת מגלקום בע''מ &#169;</p>
+    <p id="p1"> &#169;כל הזכויות שמורות לחברת מגלקום בע''מ </p>
   </div>
 </body>
 </html>
