--- a/index.html
+++ b/index.html
@@ -1,115 +1,122 @@
 <!DOCTYPE html>
 <!-- אתר נכתב על ידי ולדיסלב לביא עובד חברת מגלקום -->
-<html lang="en">
-  <form dir="rtl">
-<head>
+<html lang="he">
+<form dir="rtl">
+
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>magalcom אתר עזר לטכנאי</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-</head>
-<body>
-  <form dir="rtl">
-  <nav>
-    <div class="wrapper">
-      <div class="logo"><a href="https://magalcom.com/">magalcom</a></div>
-      <input type="radio" name="slider" id="menu-btn">
-      <input type="radio" name="slider" id="close-btn">
-      <ul class="nav-links">
-        <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-        <li><a href="index.html" class="desktop-item"><i class="fa fa-home" aria-hidden="true"></i>  דף הבית </i></a></li>
-        <!-- <label for="ajax" class="mobile-item"><i class="fa fa-home" aria-hidden="true"></i>  דף הבית </i></a></li></label> -->
-        <li>
-          <a href="#" class="desktop-item"><i class="fa fa-cogs" aria-hidden="true"></i>  תפריט מהיר </a>
-          <input type="checkbox" id="showDrop">
-          <label for="showDrop" class="mobile-item"><i class="fa fa-cogs" aria-hidden="true"></i>  תפריט מהיר </label>
-          <ul class="drop-menu">
-            <li><a href="#">לקוחות החברה</a></li>
-            <li><a href="#"> טלפון לקוחות בשרות</a></li>
-            <li><a href="#">תוכנות עזר</a></li>
-            <li><a href="#">Drop menu 4</a></li>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  </head>
+
+  <body>
+    <form dir="rtl">
+      <nav>
+        <div class="wrapper">
+          <div class="logo"><a href="https://magalcom.com/">magalcom</a></div>
+          <input type="radio" name="slider" id="menu-btn">
+          <input type="radio" name="slider" id="close-btn">
+          <ul class="nav-links">
+            <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
+            <li><a href="index.html" class="desktop-item"><i class="fa fa-home" aria-hidden="true"></i> דף הבית </i></a>
+            </li>
+            <li>
+              <a href="#" class="desktop-item"><i class="fa fa-cogs" aria-hidden="true"></i> תפריט מהיר </a>
+              <input type="checkbox" id="showDrop">
+              <label for="showDrop" class="mobile-item"><i class="fa fa-cogs" aria-hidden="true"></i> תפריט מהיר
+              </label>
+              <ul class="drop-menu">
+                <li><a href="https://magalcom.com/clients-2/">לקוחות החברה</a></li>
+                <li><a href="#"> טלפון לקוחות בשרות</a></li>
+                <li><a href="http://address.co.il/"> תוכנות עזר לטכנאי</a></li>
+                <li><a href="index.html">חזרה לדף הראשי</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#" class="desktop-item"><i class="fa fa-list-alt" aria-hidden="true"></i> רשימת לקוחות </a>
+              <input type="checkbox" id="showMega">
+              <label for="showMega" class="mobile-item"><i class="fa fa-list-alt" aria-hidden="true"></i> רשימת
+                לקוחות</label>
+              <div class="mega-box">
+                <div class="content">
+                  <div class="row">
+                    <hr>
+                    <header> לקוחות החברה בדרום</header>
+                    <hr>
+                    <ul class="mega-links">
+                      <li><a href="#">כי''ל</a></li>
+                      <li><a href="#">סודה סטרים</a></li>
+                      <li><a href="#">נתיבי איילון</a></li>
+                      <li><a href="#">עריית אשקלון</a></li>
+                      <li><a href="#">עריית אשדוד</a></li>
+                      <li><a href="#">חברת חשמל</a></li>
+                      <li><a href="#">משטרת ישראל</a></li>
+                    </ul>
+                  </div>
+                  <div class="row">
+                    <hr>
+                    <header>לקוחות החברה בצפון</header>
+                    <hr>
+                    <ul class="mega-links">
+                      <li><a href="#">רכבת ישראל</a></li>
+                      <li><a href="#"> צ.ה.ל</a></li>
+                      <li><a href="#">נתיבי ישראל</a></li>
+                      <li><a href="#">טכניון חיפה</a></li>
+                      <li><a href="#">עריית חיפה</a></li>
+                      <li><a href="#">עריית הרצליה</a></li>
+                      <li><a href="#"> תל השומר</a></li>
+                    </ul>
+                  </div>
+                  <div class="row">
+                    <hr>
+                    <header>לקוחות החברה במרכז</header>
+                    <hr>
+                    <ul class="mega-links">
+                      <li><a href="#">משרדי כ''יל</a></li>
+                      <li><a href="#">עריית תל אביב</a></li>
+                      <li><a href="#">נתיבי איילון</a></li>
+                      <li><a href="#">IBM</a></li>
+                      <li><a href="#">בנק לאומי</a></li>
+                      <li><a href="#">קוקה קולה</a></li>
+                      <li><a href="#">משטרת ישראל</a></li>
+                    </ul>
+                  </div>
+                  <div class="row">
+                    <hr>
+                    <header> לקוחות החברה בנגב</header>
+                    <hr>
+                    <ul class="mega-links">
+                      <li><a href="#">כי''ל</a></li>
+                      <li><a href="#">סודה סטרים</a></li>
+                      <li><a href="#">אוניברסיטת בן גוריון</a></li>
+                      <li><a href="#">שרות בתי הסוהר</a></li>
+                      <li><a href="#">עריית באר שבע</a></li>
+                      <li><a href="#">טבע טק נאות חובב</a></li>
+                      <li><a href="#">משטרת בארשבע</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li><a href="tel:+972543230056" class="desktop-item"><i class="fa fa-phone" aria-hidden="true"></i> מחלקת
+                שרות החברה</a></li>
+            <label for="tel"><a href="tel:+972543230056" class="mobile-item"><i class="fa fa-phone"
+                  aria-hidden="true"></i> מחלקת שרות החברה</a></li></label>
           </ul>
-        </li>
-        <li>
-          <a href="#" class="desktop-item"><i class="fa fa-list-alt" aria-hidden="true"></i>  רשימת לקוחות </a>
-          <input type="checkbox" id="showMega">
-          <label for="showMega" class="mobile-item"><i class="fa fa-list-alt" aria-hidden="true"></i> רשימת לקוחות</label>
-          <div class="mega-box">
-            <div class="content">
-              <div class="row">
-                <hr>
-                <header> לקוחות החברה בדרום</header>
-                <hr>
-                <ul class="mega-links">
-                  <li><a href="#">כי''ל</a></li>
-                  <li><a href="#">סודה סטרים</a></li>
-                  <li><a href="#">נתיבי איילון</a></li>
-                  <li><a href="#">עריית אשקלון</a></li>
-                  <li><a href="#">עריית אשדוד</a></li>
-                  <li><a href="#">חברת חשמל</a></li>
-                  <li><a href="#">משטרת ישראל</a></li>
-                </ul>
-              </div>
-              <div class="row">
-                <hr>
-                <header>לקוחות החברה בצפון</header>
-                <hr>
-                <ul class="mega-links">
-                    <li><a href="#">רכבת ישראל</a></li>
-                    <li><a href="#"> צ.ה.ל</a></li>
-                    <li><a href="#">נתיבי ישראל</a></li>
-                    <li><a href="#">טכניון חיפה</a></li>
-                    <li><a href="#">עריית חיפה</a></li>
-                    <li><a href="#">עריית הרצליה</a></li>
-                    <li><a href="#"> תל השומר</a></li>
-                </ul>
-              </div>
-              <div class="row">
-                <hr>
-                <header>לקוחות החברה במרכז</header>
-                <hr>
-                <ul class="mega-links">
-                    <li><a href="#">משרדי כ''יל</a></li>
-                    <li><a href="#">עריית תל אביב</a></li>
-                    <li><a href="#">נתיבי איילון</a></li>
-                    <li><a href="#">IBM</a></li>
-                    <li><a href="#">בנק לאומי</a></li>
-                    <li><a href="#">קוקה קולה</a></li>
-                    <li><a href="#">משטרת ישראל</a></li>
-                </ul>
-              </div>
-              <div class="row">
-                <hr>
-                <header> לקוחות החברה בנגב</header>
-                <hr>
-                <ul class="mega-links">
-                    <li><a href="#">כי''ל</a></li>
-                    <li><a href="#">סודה סטרים</a></li>
-                    <li><a href="#">אוניברסיטת בן גוריון</a></li>
-                    <li><a href="#">שרות בתי הסוהר</a></li>
-                    <li><a href="#">עריית באר שבע</a></li>
-                    <li><a href="#">טבע טק נאות חובב</a></li>
-                    <!-- <li><a href="#">משטרת בארשבע</a></li> -->
-                </ul>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li><a href="tel:+972543230056"class="desktop-item"><i class="fa fa-phone" aria-hidden="true"></i> מחלקת שרות החברה</a></li>
-         <label for="tel"><a href="tel:+972543230056" class="mobile-item"><i class="fa fa-phone" aria-hidden="true"></i> מחלקת שרות החברה</a></li></label> 
-      </ul>
-      <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
-    </div>
-  </nav>
-<!--............................. עד כאן החלק של סרגל כלים........................................... -->
-  <div class="body-text">
-    <div class="title">אתר עזר לטכנאים  magalcom</div>
-    <div class="sub-title">
-    <img src="Slider-5.jpg" alt="">
-  </div>
-  <p id="p2">אין להעתיק,להפיץ,להציג בפומבי או למסור לצד שלישי כל חלק מן האתר בלא קבלת אישור מחברת מגלקום בע''מ</p>
-    <p id="p1"> &#169;כל הזכויות שמורות לחברת מגלקום בע''מ </p>
-  </div>
-</body>
+          <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
+        </div>
+      </nav>
+      <!--............................. עד כאן החלק של סרגל כלים........................................... -->
+      <div class="body-text">
+        <div class="title">אתר עזר לטכנאים magalcom</div>
+        <div class="sub-title">
+          <img src="Slider-5.jpg" alt="תמונת פזל מפתח">
+        </div>
+        <p id="p2">אין להעתיק,להפיץ,להציג בפומבי או למסור לצד שלישי כל חלק מן האתר בלא קבלת אישור מחברת מגלקום בע''מ</p>
+        <p id="p1"> &#169;כל הזכויות שמורות לחברת מגלקום בע''מ </p>
+      </div>
+  </body>
+
 </html>
