--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
               </label>
               <ul class="drop-menu">
                 <li><a href="https://magalcom.com/clients-2/">לקוחות החברה</a></li>
-                <li><a href="#"> טלפון לקוחות בשרות</a></li>
                 <li><a href="http://address.co.il/"> תוכנות עזר לטכנאי</a></li>
+                <li><a href="mishak.html"> להפיק שעמום</a></li>
                 <li><a href="index.html">חזרה לדף הראשי</a></li>
               </ul>
             </li>
