--- a/mishak.html
+++ b/mishak.html
@@ -20,7 +20,8 @@
     <p class="animate__animated animate__bounce animate__infinite" id="result"></p>
     <hr>
     <span id="counter">כמות הפעמים שיצא לך דאבל : 0 </span>
-    <p>! מי שיוצא לו הכי הרבה פעמים דאבל בזמן הכי קצר ניצח </p>
+    <p>  !מי שיוצא לו שש שש ניצחון מוחץ </p>
+    
 
 </body>
 </html>
